Implemented Cmax calculator. Improvements.